config("vstl_config") {
  include_dirs = [ "include" ]
}

source_set("vstl") {
  sources = [
    "include/vstl/detail/config.hpp",
    "include/vstl/iterator/size.hpp",
    "include/vstl/string.hpp",
    "include/vstl/string_fwd.hpp",
    "include/vstl/string_view.hpp",
    "include/vstl/string_view_fwd.hpp",
    "include/vstl/utility/round.hpp",
    "include/vstl/vector.hpp",
    "src/string.cpp",
    "src/string_view.cpp",
  ]

  public_configs = [ ":vstl_config" ]
  public_deps = [
    "$external/boost/libs/container",
  ]
}

executable("vstl_unittests") {
  testonly = true

  sources = [
    "test/string_view.cpp",
  ]

  deps = [
    ":vstl",
    "$external/googletest",
    "$external/googletest/googletest:googletest_main",
  ]
}
